--- a/Manual/openad.tex
+++ b/Manual/openad.tex
@@ -104,7 +104,12 @@
 	{\small	\em Draft date \today }}
 \date{ }
 
+\fancyhead[RE]{\leftmark}
+\fancyhead[LE]{}
+\fancyhead[RO]{}
+\fancyhead[LO]{\nouppercase\rightmark}
 \fancyfoot[LE,RO]{\input{versionInfo.txt}}
+\fancyfoot[LO,RE]{OpenAD/F: User Manual}
 
 \begin{document}
 \maketitle
